--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -2,13 +2,16 @@ body, html {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     height: 100%;
     display: grid;
+    background-color: darkcyan;
+    padding: 0;
+    margin: 0;
 }
 
 .center-main {
     margin: auto;
-    background-color: gray;
+    background-color: darkseagreen;
     padding: 2em;
-    border-style: solid;
+    border-style: none;
     border-radius: 1em;
 }
 
@@ -33,7 +36,16 @@ input {
     padding-top: 0.75em;
 }
 
+.username > label {
+    color: white;
+}
+
+.password > label {
+    color: white;
+}
+
 h1 {
     margin: 0;
     padding-bottom: 0.5em;
+    color: white;
 }
